# atlas

./: .gitignore  BENCHMARKS.md  CLAUDE.md  COMPARISON.md  Cargo.toml  LICENSE  README.md  install.sh
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
crates/atlas-cli/: Cargo.toml
crates/atlas-cli/benches/: pipeline.rs
crates/atlas-cli/src/: main.rs
crates/atlas-cli/src/commands/: describe.rs  index.rs  inspect.rs  mod.rs  query.rs
crates/atlas-cli/tests/: integration.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: error.rs  lib.rs  types.rs
crates/atlas-index/: Cargo.toml
crates/atlas-index/src/: builder.rs  lib.rs  store.rs
crates/atlas-render/: Cargo.toml
crates/atlas-render/src/: jsonl.rs  lib.rs
crates/atlas-scanner/: Cargo.toml
crates/atlas-scanner/src/: bundle.rs  fingerprint.rs  hash.rs  lib.rs  scanner.rs
crates/atlas-score/: Cargo.toml
crates/atlas-score/src/: bm25f.rs  fusion.rs  heuristic.rs  hybrid.rs  lib.rs  pagerank.rs  resolve.rs  tokenizer.rs
crates/atlas-treesit/: Cargo.toml
crates/atlas-treesit/src/: lib.rs  regex_chunker.rs
crates/topo-cli/: Cargo.toml
crates/topo-cli/benches/: pipeline.rs
crates/topo-cli/src/: main.rs
crates/topo-cli/src/commands/: describe.rs  explain.rs  index.rs  init.rs  inspect.rs  mcp.rs  query.rs  render.rs
crates/topo-cli/templates/: claude-md-section.md
crates/topo-cli/tests/: integration.rs
crates/topo-core/: Cargo.toml
crates/topo-core/src/: error.rs  lib.rs
crates/topo-index/: Cargo.toml
crates/topo-index/src/: builder.rs  lib.rs  store.rs
crates/topo-render/: Cargo.toml
crates/topo-render/src/: jsonl.rs  lib.rs
crates/topo-scanner/: Cargo.toml
crates/topo-scanner/src/: bundle.rs  fingerprint.rs  lib.rs  scanner.rs
crates/topo-score/: Cargo.toml
crates/topo-score/src/: bm25f.rs  fusion.rs  git_recency.rs  heuristic.rs  hybrid.rs  lib.rs  pagerank.rs  resolve.rs
crates/topo-treesit/: Cargo.toml
crates/topo-treesit/src/: lib.rs  queries.rs  regex_chunker.rs  ts_chunker.rs
docs/: DELIVERY.md  PRD.md  RESEARCH.md  SPEC.md
packaging/homebrew/: atlas.rb  topo.rb
vhs/: hero.tape  init.tape  query.tape  quick.tape  render.tape
