[workspace]
members = [
    "crates/atlas-core",
    "crates/atlas-scanner",
    "crates/atlas-index",
    "crates/atlas-score",
    "crates/atlas-render",
    "crates/atlas-treesit",
    "crates/atlas-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Fazal Majid"]
license = "MIT"
description = "Fast codebase indexer and file selector for LLMs"
repository = "https://github.com/demwunz/atlas"

[workspace.dependencies]
# Shared dependencies — crates opt in via `dep.workspace = true`
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
sha2 = "0.10"
rayon = "1"
rkyv = "0.8"
memmap2 = "0.9"

# Internal crates
atlas-core = { path = "crates/atlas-core" }
atlas-scanner = { path = "crates/atlas-scanner" }
atlas-index = { path = "crates/atlas-index" }
atlas-score = { path = "crates/atlas-score" }
atlas-render = { path = "crates/atlas-render" }
atlas-treesit = { path = "crates/atlas-treesit" }
atlas-cli = { path = "crates/atlas-cli" }
