[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace]
members = [
    "crates/topo-core",
    "crates/topo-scanner",
    "crates/topo-index",
    "crates/topo-score",
    "crates/topo-render",
    "crates/topo-treesit",
    "crates/topo-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Fazal Majid"]
license = "MIT"
description = "Fast codebase indexer and file selector for LLMs"
repository = "https://github.com/demwunz/topo"

[workspace.dependencies]
# Shared dependencies — crates opt in via `dep.workspace = true`
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
sha2 = "0.10"
rayon = "1"
rkyv = "0.8"
memmap2 = "0.9"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "1"

# Tree-sitter
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1"
tree-sitter-scala = "0.23"
tree-sitter-haskell = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-lua = "0.4"
tree-sitter-php = "0.24"
tree-sitter-r = "1"

# Internal crates
topo-core = { path = "crates/topo-core", version = "0.1.0" }
topo-scanner = { path = "crates/topo-scanner", version = "0.1.0" }
topo-index = { path = "crates/topo-index", version = "0.1.0" }
topo-score = { path = "crates/topo-score", version = "0.1.0" }
topo-render = { path = "crates/topo-render", version = "0.1.0" }
topo-treesit = { path = "crates/topo-treesit", version = "0.1.0" }
topo-cli = { path = "crates/topo-cli", version = "0.1.0" }
