[package]
name = "atlas-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JSONL v0.3, JSON, and human-readable output rendering"
repository.workspace = true

[dependencies]
atlas-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
