[package]
name = "atlas-score"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BM25F, heuristic, structural, and RRF fusion scoring"
repository.workspace = true

[dependencies]
atlas-core = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
