[package]
name = "topo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Domain types, traits, and error types for Topo"
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }
