[package]
name = "topo-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Deep index with rkyv zero-copy serialization"
repository.workspace = true

[dependencies]
topo-core = { workspace = true }
topo-scanner = { workspace = true }
topo-score = { workspace = true }
topo-treesit = { workspace = true }
rkyv = { workspace = true }
sha2 = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
