[package]
name = "topo-scanner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "File walking with gitignore support and content hashing"
repository.workspace = true

[dependencies]
topo-core = { workspace = true }
ignore = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
